k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wizapp
  namespace: wiz
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wizapp
  template:
    metadata:
      labels:
        app: wizapp
    spec:
      serviceAccountName: wizapp-sa
      containers:
        - name: wizapp
          image: REPLACE_IMAGE
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
