k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wizapp
  namespace: wiz
spec:
  selector:
    app: wizapp
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
